Fixed AcademicTiles image alignment

--- a/src/components/sections/Academic/AcademicTilesSection.css
+++ b/src/components/sections/Academic/AcademicTilesSection.css
@@ -26,7 +26,7 @@
 .tile {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
   background-color: var(--nav-bg);
   border-radius: 20px;
   overflow: hidden;
@@ -57,10 +57,13 @@
   overflow: hidden;
 }
 
+/* New style for image here*/
+
 .tile-content {
   color: var(--primary-color);
   padding: 20px;
   text-align: left;
+  margin-top: auto;
 }
 
 .tile-content h3 {
